--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.2",
     "server-only": "^0.0.1",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.6",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
@@ -83,6 +84,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
