--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "payload": "^3.45.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
