--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.34.3",
     "sonner": "^2.0.6",
+    "stripe": "^18.5.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
