Add some general improvements

--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "generate:types": "payload generate:types",
     "db:fresh": "payload migrate:fresh",
     "seed": "tsx src/seed.ts",
-    "seed:products": "tsx src/seed-products.ts"
+    "seed:products": "tsx src/seed-products.ts",
+    "migrate:descriptions": "tsx scripts/migrate-descriptions.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
-    "@payloadcms/db-mongodb": "^3.60.0",
-    "@payloadcms/next": "^3.60.0",
-    "@payloadcms/payload-cloud": "^3.54.0",
-    "@payloadcms/plugin-multi-tenant": "^3.60.0",
-    "@payloadcms/richtext-lexical": "^3.60.0",
-    "@payloadcms/ui": "^3.60.0",
+    "@payloadcms/db-mongodb": "3.59.1 ",
+    "@payloadcms/next": "3.59.1 ",
+    "@payloadcms/payload-cloud": "3.59.1 ",
+    "@payloadcms/plugin-multi-tenant": "3.59.1 ",
+    "@payloadcms/richtext-lexical": "3.59.1",
+    "@payloadcms/ui": "3.59.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -64,7 +65,7 @@
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
-    "payload": "^3.60.0",
+    "payload": "3.59.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
