--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.11.0",
     "input-otp": "^1.4.2",
+    "lru-cache": "^11.2.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
