--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@payloadcms/payload-cloud": "3.59.1 ",
     "@payloadcms/plugin-multi-tenant": "3.59.1 ",
     "@payloadcms/richtext-lexical": "3.59.1",
+    "@payloadcms/storage-vercel-blob": "3.59.1",
     "@payloadcms/ui": "3.59.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
