Change the login logic for customers

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "migrate:descriptions": "tsx scripts/migrate-descriptions.ts",
     "migrate-to-cloud": "tsx scripts/migrate-to-cloud.ts",
     "fix-media-urls": "tsx scripts/fix-media-urls.ts",
-    "reupload-media": "tsx scripts/reupload-media.ts"
+    "reupload-media": "tsx scripts/reupload-media.ts",
+    "fix-user-tenants": "tsx scripts/fix-user-tenants.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
