--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fix-user-tenants": "tsx scripts/fix-user-tenants.ts"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@hookform/resolvers": "^5.1.1",
     "@payloadcms/db-mongodb": "3.59.1 ",
     "@payloadcms/next": "3.59.1 ",
