feat: introduce new logo and update PWA manifest configuration.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,13 @@
   "theme_color": "#16a34a",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/logo.png",
       "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icon.png",
+      "src": "/logo.png",
       "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "any"
